[gd_scene load_steps=8 format=3 uid="uid://bniga06ym5etf"]

[ext_resource type="Script" uid="uid://00ht1by0coxe" path="res://scripts/Tile.gd" id="1_vhibn"]
[ext_resource type="Texture2D" uid="uid://b7kl103mmu65v" path="res://assets/images/tile-eql.png" id="2_r3gf4"]
[ext_resource type="PackedScene" uid="uid://c07ud07isy441" path="res://scenes/Modifier.tscn" id="3_rvdvl"]

[sub_resource type="Animation" id="Animation_r3gf4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TileGraphic:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_rvdvl"]
resource_name = "deselect"
length = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TileGraphic:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -64), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vhibn"]
resource_name = "selected"
length = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TileGraphic:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ukgqd"]
_data = {
&"RESET": SubResource("Animation_r3gf4"),
&"deselect": SubResource("Animation_rvdvl"),
&"selected": SubResource("Animation_vhibn")
}

[node name="Tile" type="Control"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 3
anchors_preset = 0
offset_right = 128.0
offset_bottom = 128.0
script = ExtResource("1_vhibn")

[node name="TileGraphic" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_r3gf4")
expand_mode = 1
stretch_mode = 5

[node name="Value" parent="TileGraphic" instance=ExtResource("3_rvdvl")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -29.0
offset_bottom = 0.0
grow_vertical = 0

[node name="Mult" parent="TileGraphic" instance=ExtResource("3_rvdvl")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -29.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0
text = "X0"

[node name="Highlight" type="ColorRect" parent="TileGraphic"]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.501961)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ukgqd")
}
speed_scale = 1.5

[connection signal="mouse_entered" from="TileGraphic" to="." method="_on_tile_graphic_mouse_entered"]
[connection signal="mouse_exited" from="TileGraphic" to="." method="_on_tile_graphic_mouse_exited"]
